--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,20 +10,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2
-  video_player: ^0.10.5
-  intro_slider: ^2.2.8
-  flutter_screenutil: ^0.7.0
+  cupertino_icons: ^0.1.3
+  flutter_screenutil: ^1.0.2
   font_awesome_flutter: ^8.5.0
   http: ^0.12.0+4
-  shared_preferences: ^0.5.6
+  shared_preferences: ^0.5.6+1
   rflutter_alert: ^1.0.3
-  gradient_widgets: ^0.5.1
-  charts_flutter: ^0.8.1
-  json_annotation: ^3.0.0
-  flutter_custom_clippers: ^0.1.6
-  html_unescape: ^1.0.1+2
-  auto_size_text: ^2.0.0+2
+  flutter_custom_clippers: ^1.1.0
+  html_unescape: ^1.0.1+3
+  auto_size_text: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -37,19 +32,14 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/logo_mmd.png
     - assets/images/logo_neo.png
-    - assets/images/logo_or_11.png
+    - assets/images/logo_mmd.png
     - assets/images/logo_programming.png
     - assets/images/logo_skj.png
+    - assets/images/logo_or_11.png
     - assets/images/avatar.jpg
-    - assets/images/image_01.png
-    - assets/images/image_02.png
+    - assets/images/login_2.png
     - assets/images/wrong.png
-    - assets/images/profile_header_background.jpg
-    - assets/images/bad.png
-    - assets/images/good.png
-    - assets/images/success.png
     - assets/images/intro_1.png
     - assets/images/intro_2.png
     - assets/images/intro_3.png
