--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/fitness_app/
     - assets/images/logo_neo.png
     - assets/images/logo_mmd.png
     - assets/images/logo_programming.png
