--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,21 +32,22 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/fitness_app/
-    - assets/images/logo_neo.png
-    - assets/images/logo_mmd.png
-    - assets/images/logo_programming.png
-    - assets/images/logo_skj.png
-    - assets/images/logo_or_11.png
-    - assets/images/logo_or_11_1.png
-    - assets/images/logo_or_11_2.png
-    - assets/images/avatar.jpg
-    - assets/images/login_1.png
-    - assets/images/login_2.png
-    - assets/images/wrong.png
-    - assets/images/intro_1.png
-    - assets/images/intro_2.png
-    - assets/images/intro_3.png
+    - assets/images/
+    # - assets/images/logo_neo.png
+    # - assets/images/logo_mmd.png
+    # - assets/images/logo_programming.png
+    # - assets/images/logo_skj.png
+    # - assets/images/logo_or_11.png
+    # - assets/images/logo_or_11_1.png
+    # - assets/images/logo_or_11_2.png
+    # - assets/images/avatar.jpg
+    # - assets/images/login_1.png
+    # - assets/images/login_2.png
+    # - assets/images/wrong.png
+    # - assets/images/intro_1.png
+    # - assets/images/intro_2.png
+    # - assets/images/intro_3.png
+    # - assets/images/comming_soon.png
 
 
   fonts:
