--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,10 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.3
-  flutter_screenutil: ^1.0.2
   font_awesome_flutter: ^8.5.0
   http: ^0.12.0+4
   shared_preferences: ^0.5.6+1
   rflutter_alert: ^1.0.3
-  flutter_custom_clippers: ^1.1.0
-  html_unescape: ^1.0.1+3
-  auto_size_text: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -33,97 +29,31 @@ flutter:
 
   assets:
     - assets/images/
-    # - assets/images/logo_neo.png
-    # - assets/images/logo_mmd.png
-    # - assets/images/logo_programming.png
-    # - assets/images/logo_skj.png
-    # - assets/images/logo_or_11.png
-    # - assets/images/logo_or_11_1.png
-    # - assets/images/logo_or_11_2.png
-    # - assets/images/avatar.jpg
-    # - assets/images/login_1.png
-    # - assets/images/login_2.png
-    # - assets/images/wrong.png
-    # - assets/images/intro_1.png
-    # - assets/images/intro_2.png
-    # - assets/images/intro_3.png
-    # - assets/images/comming_soon.png
-    # - assets/images/jk_female.png
-    # - assets/images/jk_male.png
-    # - assets/images/gd_a.png
-    # - assets/images/gd_b.png
-    # - assets/images/gd_ab.png
-    # - assets/images/gd_b.png
-    # - assets/images/agama_islam.png
-    # - assets/images/logout.png
-
 
   fonts:
-    - family: OpenSansBold
+    - family: Open Sans
       fonts:
         - asset: assets/fonts/OpenSans-Bold.ttf
-
-    - family: OpenSansSemiBold
-      fonts:
-        - asset: assets/fonts/OpenSans-Semibold.ttf
-
-        
-    - family: OpenSansBoldItalic
-      fonts:
+          weight: 700
         - asset: assets/fonts/OpenSans-BoldItalic.ttf
-
-        
-    - family: RobotoMonoBold
-      fonts:
-        - asset: assets/fonts/RobotoMono-Bold.ttf
-
-    - family: Raleway
-      fonts:
-        - asset: assets/fonts/Raleway-Regular.ttf
-        - asset: assets/fonts/Raleway-Bold.ttf
-
-    - family: WorkSans
-      fonts:
-        - asset: assets/fonts/WorkSans-Regular.ttf
-        - asset: assets/fonts/WorkSans-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/WorkSans-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/WorkSans-Bold.ttf
           weight: 700
 
-    - family: WorkSansSemiBold
-      fonts:
-        - asset: assets/fonts/WorkSans-SemiBold.ttf
+        - asset: assets/fonts/OpenSans-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/OpenSans-ExtraBoldItalic.ttf
+          weight: 800
 
-    - family: WorkSansBold
-      fonts:
-        - asset: assets/fonts/WorkSans-Bold.ttf
+        - asset: assets/fonts/OpenSans-Light.ttf
+          weight: 300
+        - asset: assets/fonts/OpenSans-LightItalic.ttf
+          weight: 300
 
-    - family: WorkSansMedium
-      fonts:
-        - asset: assets/fonts/WorkSans-Medium.ttf
+        - asset: assets/fonts/OpenSans-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/OpenSans-Italic.ttf
+          weight: 400
 
-    - family: CustomIcons
-      fonts:
-        - asset: assets/fonts/CustomIcons.ttf
-
-    - family: Poppins-Bold
-      fonts:
-        - asset: assets/fonts/Poppins-Bold.ttf
-
-    - family: Poppins-Medium
-      fonts:
-        - asset: assets/fonts/Poppins-Medium.ttf
-
-    - family: Quando
-      fonts:
-        - asset: assets/fonts/Quando.ttf
-
-    - family: Satisfy
-      fonts:
-        - asset: assets/fonts/Satisfy.ttf
-
-    - family: Alike
-      fonts:
-        - asset: assets/fonts/Alike-Regular.ttf
+        - asset: assets/fonts/OpenSans-Semibold.ttf
+          weight: 600
+        - asset: assets/fonts/OpenSans-SemiboldItalic.ttf
+          weight: 600
