--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: neotelemetri_or11
-description: Neo Telemtri Open Recruitment application.
+description: Neo Telemetri Open Recruitment application.
 
 version: 1.0.0
 
